assets/style.css
body {
    background: url("PrisonParallax.png") bottom left no-repeat fixed #07aaff;
    background-repeat: repeat-x;

    color: white;

    font-family: 'Play', sans-serif;

    text-shadow: 0px 1px black;
}

.background-box {
	background-color: rgba(62, 62, 62, 0.64);
    
    border-width: 2px;
    border-style: solid;
    border-color: rgba(76, 76, 76, 0.4);
    background-clip: padding-box;
}

ul {
    list-style: square inside;
}

img {
	/* Copied from .img-fluid */
	max-width: 100%;
	height: auto;
}

a {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
}

a:hover {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
}

h2 {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
    font-weight: bold;
}

.white {
    color: white;
    text-shadow: 0px 1px rgba(40, 40, 40, 1.0);
}

.text-muted {
    text-shadow: 0px 1px #2d2d2d;
}

.btn-primary {
    border-radius: 0px;
    transition: none;
}

.btn-primary:hover {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
    background-color: rgba(68, 68, 68, 0.64);
    border-color: rgba(82, 82, 82, 0.4);
}

